force-app/main/default/objects/Contact/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The contact&apos;s city</description>
    <inlineHelpText>Write the contact&apos;s city</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>