force-app/main/default/objects/Contact/fields/Complement__c.field-meta.xml
<CustomField>
    <fullName>Complement__c</fullName>
    <description>The contact&apos;s complement</description>
    <inlineHelpText>Write the complement of them</inlineHelpText>
    <label>Complement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>