force-app/main/default/objects/Contact/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <description>The Contact CPF</description>
    <externalId>true</externalId>
    <inlineHelpText>Write the CPF of Them</inlineHelpText>
    <label>CPF</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>