force-app/main/default/objects/Contact/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <description>The Neighborhood of the contact</description>
    <inlineHelpText>White the Neighborhood of them</inlineHelpText>
    <label>Neighborhood</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>