force-app/main/default/objects/Contact/fields/RG__c.field-meta.xml
<CustomField>
    <fullName>RG__c</fullName>
    <description>The Contact Rg</description>
    <externalId>true</externalId>
    <inlineHelpText>White the RG of them</inlineHelpText>
    <label>RG</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>