force-app/main/default/objects/Contact/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>The Street where the contact live</description>
    <inlineHelpText>White the street of them</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>