force-app/main/default/objects/Contact/fields/UseSameAccountAddress__c.field-meta.xml
<CustomField>
    <fullName>UseSameAccountAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you want to use the same account address</description>
    <inlineHelpText>Chose if you want to use the same account address</inlineHelpText>
    <label>Use Same Account Address</label>
    <type>Checkbox</type>
</CustomField>